--- a/HeadControl/app/src/main/res/layout/fragment_battery.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_battery.xml
@@ -223,113 +223,116 @@
             android:textColor="#E8E8E8"
             android:textSize="14sp" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginRight="234dp"
                 android:layout_weight="1"
                 android:background="@mipmap/bg"
                 android:orientation="horizontal">
+
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="15dp"
 
                     >
-                <RelativeLayout
-                    android:layout_width="1386dp"
-                    android:layout_height="523dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="24dp"
-                    android:background="@mipmap/bg02"
-                    android:gravity="center|center_horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="910dp"
-                        android:layout_height="335dp"
-                        android:layout_centerInParent="true"
-                        android:layout_marginLeft="100dp"
-                        android:layout_marginRight="100dp"
-                        android:background="@mipmap/dianchi" />
+                    <RelativeLayout
+                        android:layout_width="1386dp"
+                        android:layout_height="523dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="24dp"
+                        android:background="@mipmap/bg02"
+                        android:gravity="center|center_horizontal">
 
-                </RelativeLayout>
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="910dp"
+                            android:layout_height="335dp"
+                            android:layout_centerInParent="true"
+                            android:layout_marginLeft="100dp"
+                            android:layout_marginRight="100dp"
+                            android:background="@mipmap/dianchi" />
 
-                    <ImageView
-                        android:layout_width="53dp"
-                        android:layout_height="49dp"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentRight="true"
+                    </RelativeLayout>
 
-                        android:background="@mipmap/you_yc_no" />
+
                 </RelativeLayout>
             </LinearLayout>
 
             <!--** -->
 
-
-
-
-
-
-            <LinearLayout
-                android:id="@+id/ll_right_bar"
-                android:layout_width="234dp"
+            <RelativeLayout
+                android:id="@+id/ll_right_bar1"
+                android:layout_width="290dp"
                 android:layout_height="1009dp"
-                android:background="@mipmap/zuolan"
-                android:orientation="vertical">
+                android:layout_alignParentRight="true"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="53dp"
+                    android:layout_height="49dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@mipmap/you_yc_no" />
+                <LinearLayout
+                    android:id="@+id/ll_right_bar"
+                    android:layout_width="234dp"
+                    android:layout_height="1009dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@mipmap/zuolan"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_Battery_Level"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:paddingTop="5dp"
-                    android:text="剩余100%电量"
-                    android:textColor="#E8E8E8"
-                    android:textSize="26sp" />
+                    <TextView
+                        android:id="@+id/tv_Battery_Level"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:paddingTop="5dp"
+                        android:text="剩余100%电量"
+                        android:textColor="#E8E8E8"
+                        android:textSize="26sp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:paddingTop="5dp"
-                    android:text="可运行10个小时"
-                    android:textColor="#E8E8E8"
-                    android:textSize="26sp" />
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="7dp"
-                    android:background="@drawable/btn_background"
-                    android:clickable="true">
-
-                    <ImageView
-                        android:id="@+id/iv_Map1"
-                        android:layout_width="168dp"
-                        android:layout_height="70dp"
-                        android:layout_alignParentBottom="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="left"
-                        android:clickable="true"
-                        android:scaleType="fitXY"
-                        android:src="@mipmap/tuichu_no"
-                        android:visibility="visible" />
-                </RelativeLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:paddingTop="5dp"
+                        android:text="可运行10个小时"
+                        android:textColor="#E8E8E8"
+                        android:textSize="26sp" />
 
 
-            </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="7dp"
+                        android:background="@drawable/btn_background"
+                        android:clickable="true">
+
+                        <ImageView
+                            android:id="@+id/iv_Map1"
+                            android:layout_width="168dp"
+                            android:layout_height="70dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="left"
+                            android:clickable="true"
+                            android:scaleType="fitXY"
+                            android:src="@mipmap/tuichu_no"
+                            android:visibility="visible" />
+                    </RelativeLayout>
 
 
-        </LinearLayout>
+                </LinearLayout>
+            </RelativeLayout>
+
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
